src/objects/Aviation_Profile__c.object
<CustomObject>
    <description>This is a detail object to a Contact Master record and will catalog the private aviation profile of individual contacts.</description>
    <fields>
        <fullName>Access_to_Personalized_Industry_Referral__c</fullName>
        <label>Access to Personalized Industry Referral</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_of_Aircraft__c</fullName>
        <label>Age of Aircraft</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aviation__c</fullName>
        <label>Aviation Type Usage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Whole A/C Owner - Not for Sale</fullName>
                </value>
                <value>
                    <fullName>Whole A/C Owner - Listed for Sale</fullName>
                </value>
                <value>
                    <fullName>Fractional Owner</fullName>
                </value>
                <value>
                    <fullName>Restricted Access to Family/Company A/C</fullName>
                </value>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>Supplemental Lift</fullName>
                </value>
                <value>
                    <fullName>Simultaneous Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biggest_Pet_Peeves__c</fullName>
        <label>Biggest Pet Peeves</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Updates__c</fullName>
        <label>Budget Updates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Buying_Criteria_1__c</fullName>
        <label>Buying Criteria #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Pilot Training</fullName>
                </value>
                <value>
                    <fullName>Guaranteed Availability</fullName>
                </value>
                <value>
                    <fullName>Wi-Fi</fullName>
                </value>
                <value>
                    <fullName>DirectTV</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>On-Time Departures</fullName>
                </value>
                <value>
                    <fullName>Consistency</fullName>
                </value>
                <value>
                    <fullName>Lowest Price</fullName>
                </value>
                <value>
                    <fullName>Best Value</fullName>
                </value>
                <value>
                    <fullName>International Expertise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Criteria_2__c</fullName>
        <label>Buying Criteria #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Pilot Training</fullName>
                </value>
                <value>
                    <fullName>Guaranteed Availability</fullName>
                </value>
                <value>
                    <fullName>Wi-Fi</fullName>
                </value>
                <value>
                    <fullName>DirectTV</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>On-Time Departures</fullName>
                </value>
                <value>
                    <fullName>Consistency</fullName>
                </value>
                <value>
                    <fullName>Lowest Price</fullName>
                </value>
                <value>
                    <fullName>Best Value</fullName>
                </value>
                <value>
                    <fullName>International Expertise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Criteria_3__c</fullName>
        <label>Buying Criteria #3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Pilot Training</fullName>
                </value>
                <value>
                    <fullName>Guaranteed Availability</fullName>
                </value>
                <value>
                    <fullName>Wi-Fi</fullName>
                </value>
                <value>
                    <fullName>DirectTV</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>On-Time Departures</fullName>
                </value>
                <value>
                    <fullName>Consistency</fullName>
                </value>
                <value>
                    <fullName>Lowest Price</fullName>
                </value>
                <value>
                    <fullName>Best Value</fullName>
                </value>
                <value>
                    <fullName>International Expertise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPA_Ready_Flight_Data__c</fullName>
        <label>CPA-Ready Flight Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Car_Rental_Favorite__c</fullName>
        <label>Car Rental Favorite</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Aviation Profile</relationshipLabel>
        <relationshipName>Aviation_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Interpretations_Summaries__c</fullName>
        <label>Contract Interpretations &amp; Summaries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DL_Passport_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DL &amp; Passport Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destination_1__c</fullName>
        <label>Destination #1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Food_Allergies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Food Allergies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Food_Allergy_Details__c</fullName>
        <label>Family Food Allergy Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Favorite_Coffee__c</fullName>
        <label>Favorite Coffee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favorite_Jet_1__c</fullName>
        <label>Favorite Jet</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flat_Floor_Step_Up__c</fullName>
        <label>Flat Floor / Step Up</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Floor</fullName>
                </value>
                <value>
                    <fullName>Step Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Attendant__c</fullName>
        <label>Flight Attendant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Indifferent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Crew_Audits__c</fullName>
        <label>Flight &amp; Crew Audits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flight_Segments_Year__c</fullName>
        <label>Flight Segments / Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fractional_Status__c</fullName>
        <label>Fractional Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Home_Airport_1__c</fullName>
        <label>Home Airport #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Airport_2__c</fullName>
        <label>Home Airport #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Year__c</fullName>
        <label>Hours / Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importance_Operator_Broker_Experience__c</fullName>
        <label>Importance Operator/Broker Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Importance_Operator_Broker__c</fullName>
        <label>Importance Operator/Broker References</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <label>Importance Operator Financial Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Importance_of_Direct_Access__c</fullName>
        <inlineHelpText>To owner/CEO/President of Operator/Brokerage</inlineHelpText>
        <label>Importance of Direct Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Audits__c</fullName>
        <label>Invoice Audits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Least_Favorite_Jet_1__c</fullName>
        <label>Least Favorite Jet</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limo_Company_Favorite__c</fullName>
        <label>Limo Company Favorite</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Analysis__c</fullName>
        <label>Needs Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Negotiation_of_Purchases_Credits__c</fullName>
        <label>Negotiation of Purchases &amp; Credits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nervous_Flyer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nervous Flyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overflight__c</fullName>
        <label>Overflight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Indifferent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Passengers__c</fullName>
        <label># Passengers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pets__c</fullName>
        <label>Pets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>Indifferent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pilot_Preference__c</fullName>
        <label>Pilot Preference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 Captains</fullName>
                </value>
                <value>
                    <fullName>Flies Only 1 Cockpit</fullName>
                </value>
                <value>
                    <fullName>Exclusive to Operator</fullName>
                </value>
                <value>
                    <fullName>Flight Safety Twice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Porfolio_Planning__c</fullName>
        <label>Porfolio Planning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_End_Date__c</fullName>
        <label>Product End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Start_Date__c</fullName>
        <label>Product Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Commitment__c</fullName>
        <label>Program Commitment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Details__c</fullName>
        <label>Program Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Expiration_Date__c</fullName>
        <label>Program Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Incentives__c</fullName>
        <label>Program Incentives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad-Hoc Charter</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Fractional</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Membership/Debit/BlockCharter</fullName>
                </value>
                <value>
                    <fullName>Whole Aircraft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Research_Aviation_Intelligence__c</fullName>
        <label>Research &amp; Aviation Intelligence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Smokers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smokers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Length__c</fullName>
        <label>Term Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>9 Months</fullName>
                </value>
                <value>
                    <fullName>12 Months</fullName>
                </value>
                <value>
                    <fullName>15 Months</fullName>
                </value>
                <value>
                    <fullName>18 Months</fullName>
                </value>
                <value>
                    <fullName>21 Months</fullName>
                </value>
                <value>
                    <fullName>24 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Aviation Profile</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Aviation Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aviation Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>